# space-invaders-arcade-emulator

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  build.bat  build.sh
.github/workflows/: docker-image.yml  eslint.yml  node-wasm-publish.yml  node-wasm.yml  node.yml  rust.yml  rustfmt.yml  wasm-build-publish.yml  wasm-npm-publish.yml  wasm-react-build-publish.yml  wasm-static-build-publish.yml  wasm.yml
si-web-react/: .eslintignore  .eslintrc.js  .gitignore  package-lock.json  package.json
si-web-react-v2/src/: App.js  index.js
si-web-react/public/: index.html  manifest.json
si-web-react/src/: App.js  App.scss  index.scss
si-web-react/src/components/: InputFile.jsx  SelectorButton.jsx  SiEmulator.jsx  SiEmulator.scss  SiGamePanel.jsx  SiGamePanel.scss  SiGameSetUp.jsx  SpaceInvadersPanel.jsx
si-web-react/src/components/githubcomponents/: GitHubProjectPanel.jsx  GitHubProjectPanel.scss
si-web-react/src/components/subcomponents/: ActionButtonStyle.jsx  ActionButtonStyle.scss  SelectorButton.jsx  SelectorButton.scss  StateButtonStyle.jsx  StateButtonStyle.scss
si-web-react/src/constants/: screen-constants.js
si-web-react/src/settings/: github-constants.js
si-web-react/src/test/: App.test.js
si-web-react/src/web-vitals/: reportWebVitals.js
si-web-static/: index.css  index.html
src/: binary_lib.rs  lib.rs  main.rs  my_sdl2.rs  my_webapi.rs  my_webgl2.rs  si_arcade.rs
src/my_webapi/: my_webaudio.rs  my_webgl2.rs  my_webinputs.rs
src/si_arcade/: cpu.rs  inputs_outputs.rs  mmu.rs  ppu.rs  spu.rs
web/: index.css  index.html
