[package]
name = "space-invaders-arcade-emulator"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Quentin MOREL (Im-Rises)"]
description = "Space Invaders Arcade Emulator"
repository = "https:://github.com/Im-Rises/space-invaders-arcade-emulator"
documentation = "https:://github.com/Im-Rises/space-invaders-arcade-emulator"
readme = "README.md"
keywords = ["space-invaders", "arcade", "emulator"]
categories = ["emulators"]

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlVertexArrayObject',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'Window',
]
