[package]
name = "space-invaders-arcade-emulator"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Quentin MOREL (Im-Rises)"]
description = "Space Invaders Arcade Emulator"
repository = "https:://github.com/Im-Rises/space-invaders-arcade-emulator"
documentation = "https:://github.com/Im-Rises/space-invaders-arcade-emulator"
readme = "README.md"
keywords = ["space-invaders", "arcade", "emulator", "webgl", "rust", "wasm"]
categories = ["emulators", "games", "space-invaders"]

[lib]
name = "space_invaders_arcade_emulator_webgl"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
image = "0.24.6"

[dependencies.web-sys]
version = "0.3.61"
features = [
    'Document',
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlVertexArrayObject',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'Window',
    'WebGlTexture',
    'console',
    'HtmlAudioElement',
    'Blob',
    'BlobPropertyBag',
    'Url',
    'KeyboardEvent',
    'WebGlUniformLocation'
]
